# tree-sitter-angular

./: .eslintrc.js  .gitignore  .npmignore  .prettierrc  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  grammar.js  log.html  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  fuzz.yml  publish.yml  tag_release.yml
bindings/c/: tree-sitter-angular.h  tree-sitter-angular.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_angular/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
corpus/: defer-statement.txt  icu.txt  if-statement.txt  interpolation.txt  property-binding.txt  selectors.txt  structural-directives.txt  template-var.txt
examples/: test.component.html
queries/: highlights.scm  indents.scm
scripts/: bump-version.sh
src/: grammar.json  node-types.json  parser.c  scanner.c  tag.h
test/corpus/: animation-binding.txt  arrow-functions.txt  assignments.txt  defer-statement.txt  for-statement.txt  html.txt  icu.txt  identifier-trivia.txt  if-statement.txt  interpolation.txt  let-statement.txt  property-binding.txt  regular-expressions.txt  selectors.txt  structural-directives.txt  switch-statement.txt  template-literal.txt  template-var.txt
