[package]
name = "tree-sitter-angular-codemod"
description = "Angular grammar for tree-sitter"
version = "0.5.6"
keywords = ["incremental", "parsing", "angular"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-angular"
edition = "2021"
license = "MIT"
build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"
tree-sitter = "~0.24.5"
tree-sitter-html = "~0.23.0"

[build-dependencies]
cc = "1.0"
