[package]
name = "tree-sitter-angular"
description = "Angular grammar for tree-sitter"
version = "0.6.1"
keywords = ["incremental", "parsing", "angular"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-angular"
edition = "2021"
license = "MIT"
build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.22.5"
tree-sitter-html = "~0.20.3"

[build-dependencies]
cc = "1.0"
